--- a/project/templates/display_usr.html
+++ b/project/templates/display_usr.html
@@ -5,26 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table{
+        .tbl{
             width: 500px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+            background-color: rgb(174, 150, 197);
         }
-        table,th,td{
-            border: 1px solid black;
+        .tbl,td,th{
+            border: 2px solid black;
         }
+        h3{
+            text-align: center;
+        }
+        form{
+            text-align: center;
+        }
+        .reg{
+            
+            margin-left: auto;
+            margin-right: auto;
+            width: 250px;
+            text-align: left;
+
+        }
+        .t1,.t2{
+            border: 0;
+        }
+        input{
+            background-color: rgb(121, 190, 190);
+        }
+        
     </style>
 </head>
-<body>
-    
+<body style="background-color: rgb(241, 225, 151);">
+      <h3 >REGISTRATION</h3>
     <form action="user_reg" method="post">
         {% csrf_token%}
-        ID<input type="text" name="id"><br>
-        Name<input type="text" name="name"><br>
-        Age<input type="number" name="age"><br>
-        Email<input type="email" name="email"><br>
-        <input type="submit" value="add">
+         <table class="reg">
+            <tr >
+                <th class="t1">ID</th>
+                <td class="t2"><input type="text" name="id"></td>
+            </tr>
+            <tr>
+                <th class="t1">Name</th>
+                <td class="t2"><input type="text" name="name"></td>
+            </tr>
+            <tr>
+                <th class="t1">Age</th>
+                <td class="t2"><input type="number" name="age"></td>
+            </tr>
+            <tr>
+                <th class="t1">Email</th>
+                <td class="t2"><input type="email" name="email"></td>
+            </tr>
+            <tr>
+                <td class="t2" colspan="2" style="text-align: center;"> <input type="submit" value="Submit" class="btn btn-primary"></td>
+            </tr>
+         </table>
+
     </form>
 
-  <table>
+  <table class="tbl">
     <tr>
         <th>ID</th>
         <th>NAME</th>
