update and delete

--- a/project/templates/display_usr.html
+++ b/project/templates/display_usr.html
@@ -80,6 +80,9 @@
         <td>{{i.name}}</td>
         <td>{{i.age}}</td>
         <td>{{i.email}}</td>
+        <td><a href="edit_user/{{i.id}}">Edit</a></td>
+        <td><a href="delete_user/{{i.id}}">Delete</a></td>
+
     </tr>
     {% endfor %}
 
