--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -60,10 +60,10 @@
 
 
 	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
+	<script src="{% 'js/modernizr-2.6.2.min.js'%}"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
+	<script src="{% 'js/respond.min.js'%}"></script>
 	<![endif]-->
 
 	</head>
@@ -662,28 +662,28 @@
 	
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="{% 'js/jquery.min.js'%}"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="{% 'js/jquery.easing.1.3.js'%}"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="{% 'js/bootstrap.min.js'%}"></script>
 	<!-- Bootstrap DateTimePicker -->
-	<script src="js/moment.js"></script>
-	<script src="js/bootstrap-datetimepicker.min.js"></script>
+	<script src="{% 'js/moment.js'%}"></script>
+	<script src="{% 'js/bootstrap-datetimepicker.min.js'%}"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="{% 'js/jquery.waypoints.min.js'%}"></script>
 	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
+	<script src="{% 'js/jquery.stellar.min.js'%}"></script>
 
 	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
+	<script src="{% 'js/jquery.flexslider-min.js'%}"></script>
 	<script>
 		$(function () {
 	       $('#date').datetimepicker();
 	   });
 	</script>
 	<!-- Main JS -->
-	<script src="js/main.js"></script>
+	<script src="{% 'js/main.js'%}"></script>
 
 	</body>
 </html>
