--- a/project/templates/display_std.html
+++ b/project/templates/display_std.html
@@ -7,14 +7,15 @@
 </head>
 <body>
     
-   <table>
+   <table border="1">
         {% for i in std %}
         <tr>
             <td>{{i.roll_no}}</td>
             <td>{{i.name}}</td>
             <td>{{i.age}}</td>
             <td>{{i.email}}</td>
-
+            <td><a href="edit_std/{{i.pk}}">EDIT</a></td>
+            <td><a href="delete_std/{{i.pk}}">DELETE</a></td>
         </tr>
         {% endfor %}
    </table>
