--- a/eshop/templates/login.html
+++ b/eshop/templates/login.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body style="background-color: aqua;">
+<body >
     
     <form action="" method="post">
         {% csrf_token %}
-        <input type="text" name="uname" id="" placeholder="username">
-        <input type="password" name="paswd" id="" placeholder="password">
-        <input type="submit" value="login">
+        <table>
+            
+            <input type="text" name="uname" id="" placeholder="username">
+            <input type="password" name="paswd" id="" placeholder="password">
+            <input type="submit" value="login">
+
+        </table>
+
 
     </form>
+
+
 
 </body>
 </html>
