edit and delete

--- a/eshop/templates/login.html
+++ b/eshop/templates/login.html
@@ -24,5 +24,23 @@
 
 
 
+    <!-- <div class="container mt-3">
+        <h2>login</h2>
+        <form action="/action_page.php">
+            {% csrf_token %}
+          <div class="mb-3 mt-3">
+            <label for="uname">Username:</label>
+            <input type="text" class="form-control" id="" placeholder="username" name="uname">
+          </div><br>
+          <div class="mb-3">
+            <label for="paswd">Password:</label>
+            <input type="password" class="form-control" id="" placeholder="password" name="paswd">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+ -->
+
+
 </body>
 </html>
