--- a/eshop/templates/shop/home.html
+++ b/eshop/templates/shop/home.html
@@ -31,5 +31,28 @@
       </nav>
 
     <h1>HOME PAGE</h1>
+
+
+<div class="container">
+  <div class="row">
+    {% for product in products %}
+
+  <div class="col-lg-4">
+  <div class="card" style="width:400px">
+    <img class="card-img-top" src="{{product.img.url}}" alt="Card image" style="width:100%; height: 500px;">
+    <div class="card-body">
+      <h4 class="card-title">{{product.name}}</h4>
+      <p class="card-text">{{product.disp}}</p>
+      <a href="delete_product/{{product.pk}}" class="btn btn-primary">Delete</a>
+      <a href="edit_product/{{product.pk}}" class="btn btn-primary">Edit</a>
+
+    </div>
+  </div>
+  </div>
+    {% endfor %}
+  </div>
+  </div>
+
+
 </body>
 </html>
