--- a/eshop/templates/login.html
+++ b/eshop/templates/login.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body >
+
+<body class="bl">
     
     <!-- <form action="" method="post">
         {% csrf_token %}
@@ -35,11 +37,11 @@
     {% endif %}
 
 
-    <div class="container mt-3">
+    <div class="container mt-3" >
         <h2>login</h2>
         <form action="" method="post">
             {% csrf_token %}
-          <div class="mb-3 mt-3">
+          <div class="mb-3 mt-3" >
             <label for="uname">Username:</label>
             <input type="text" class="form-control" id="" placeholder="username" name="uname" style="width: 200px;">
           </div><br>
