--- a/eshop/templates/shop/edit.html
+++ b/eshop/templates/shop/edit.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="form-container">
@@ -12,7 +14,7 @@
         <form action="" method="post" enctype="multipart/form-data">
           {% csrf_token %}
             <div class="mb-2 mt-2">
-                <label for="prod_id" class="form-label">Product ID:</label>
+                <label for="prod_id" class="">Product ID:</label>
                 <input type="text" class="form-control" placeholder=" Product id" name="pro_id" value="{{product.pro_id}}">
               </div>
               <div class="mb-2">
