--- a/eshop/templates/user/register.html
+++ b/eshop/templates/user/register.html
@@ -4,18 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <h2>REGISTER</h2>
+    <h2 class="rh">REGISTER</h2>
+    <!-- <form action="" method="post">
+        {% csrf_token %}
+        <table class="regtb">
+        <tr> 
+            <td><input type="text" name="name" id="" placeholder="name"></td>
+        </tr>
+        <tr>
+           <td> <input type="email" name="email" id="" placeholder="email"></td>
+        </tr>
+        <tr>
+        <td><input type="password" name="password" id="" placeholder="password"></td>
+        </tr>
+        <tr>
+        <td> <input type="submit" value="submit"></td>
+        </tr>
+    </table>
+    </form> -->
+
+
+
     <form action="" method="post">
         {% csrf_token %}
-        <input type="text" name="name" id="" placeholder="name">
-        <input type="email" name="email" id="" placeholder="email">
-        <input type="password" name="password" id="" placeholder="password">
-        <input type="submit" value="submit">
-    </form>
+        <div class="mb-3 mt-3">
+            <label for="name">name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
+          </div>
+        <div class="mb-3 mt-3">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        </div>
+        <div class="mb-3">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+        </div>
+    
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+
+
+
+
+
+
+
+
+
 
     {% if messages %}
     {% for message in  messages%}
@@ -25,6 +68,5 @@
     </div>
     {% endfor %}
     {% endif %}
-
 </body>
 </html>
