--- a/eshop/templates/user/view_pro.html
+++ b/eshop/templates/user/view_pro.html
@@ -6,20 +6,39 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .offr{
+            text-decoration-line: line-through;
+            text-decoration-color: black;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
-                <img src="{{data.img.url}}" alt="" >
-                <a href="">Add to cart</a>
-                <a href="">Buy now</a>
+                <img src="{{data.img.url}}" alt="" style="width: 100%; height: 500px;" >
+                <a href=""><button type="button" class="btn btn-primary" >Add to cart</button></a>
+                <a href=""><button type="button" class="btn btn-primary" >Buy now</button></a>
             </div>
             <div class="col-lg-7">
-                <h2>{{product.name}}</h2>
-                <p>{{product.disp}}</p>
-                <p>{{product.price}}</p>
-                <p>{{product.offer_price}}</p>
+                <h2>{{data.name}}</h2>
+                <p>{{data.disp}}</p>
+                 <p><h3>{{data.offer_price}}</h3></p> 
+                 <p ><h4 class="offr">{{data.price}}</h4></p>
+                 <p>
+                    Available offers <br> <br>
+
+Bank Offer5% Unlimited Cashback on Flipkart Axis Bank Credit CardT&C <br> <br>
+
+Bank OfferFlat ₹1,200 off on HDFC Bank Credit Card EMI Txns on 6 and 9 months tenure, Min. Txn Value: ₹15,000T&C <br><br>
+
+Bank OfferFlat ₹1,500 off on HDFC Bank Credit Card EMI Txns on 12 months tenure, Min. Txn Value: ₹15,000T&C <br><br>
+
+Combo OfferBuy 2 or more items save ₹30See all productsT&C <br><br>
+
++10 more offers <br><br>
+                 </p>
             </div>
 
         </div>
