--- a/eshop/templates/user/register.html
+++ b/eshop/templates/user/register.html
@@ -43,8 +43,8 @@
           <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
         </div>
         <div class="mb-3">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+          <label for="password">Password:</label>
+          <input type="password" class="form-control" id="password" placeholder="Enter password" name="paswd">
         </div>
     
         <button type="submit" class="btn btn-primary">Submit</button>
