--- a/eshop/templates/user/view_pro.html
+++ b/eshop/templates/user/view_pro.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-lg-5">
                 <img src="{{data.img.url}}" alt="" style="width: 100%; height: 500px;" >
-                <a href=""><button type="button" class="btn btn-primary" >Add to cart</button></a>
+                <a href="../add_to_cart/{{data.pk}}"><button type="button" class="btn btn-primary" >Add to cart</button></a>
                 <a href=""><button type="button" class="btn btn-primary" >Buy now</button></a>
             </div>
             <div class="col-lg-7">
