--- a/eshop/templates/login.html
+++ b/eshop/templates/login.html
@@ -18,7 +18,7 @@
         <table>
             
             <input type="text" name="uname" id="" placeholder="username">
-            <input type="password" name="paswd" id="" placeholder="password">
+            <input type="password" name="pswd" id="" placeholder="password">
             <input type="submit" value="login">
 
         </table>
