--- a/eshop/templates/user/view_pro.html
+++ b/eshop/templates/user/view_pro.html
@@ -19,7 +19,7 @@
             <div class="col-lg-5">
                 <img src="{{data.img.url}}" alt="" style="width: 100%; height: 500px;" >
                 <a href="../add_to_cart/{{data.pk}}"><button type="button" class="btn btn-primary" >Add to cart</button></a>
-                <a href=""><button type="button" class="btn btn-primary" >Buy now</button></a>
+                <a href="../user_buy/{{i.pk}}"><button type="button" class="btn btn-primary" >Buy now</button></a>
             </div>
             <div class="col-lg-7">
                 <h2>{{data.name}}</h2>
