--- a/prj/templates/login.html
+++ b/prj/templates/login.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    {% comment %} <h2>Login Form</h2>
+    <!-- {% comment %} <h2>Login Form</h2>
 
 <form action="" method="post">
 
@@ -23,17 +25,17 @@
     <input type="submit" value="login">
   </div>
 
-</form> {% endcomment %}
+</form> {% endcomment %} -->
 
 
-{% comment %} {% if messages %}
+<!-- {% comment %} {% if messages %}
 {% for message in  messages%}
 <div class="alert alert-warning alert-dismissible">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   {{ message }}
 </div>
 {% endfor %}
-{% endif %} {% endcomment %}
+{% endif %} {% endcomment %} -->
 
 
 <div class="container mt-3" >
@@ -46,11 +48,11 @@
       </div><br>
       <div class="mb-3">
         <label for="paswd">Password:</label>
-        <input type="password" class="form-control" id="" placeholder="password" name="paswd" style="width: 200px;">
+        <input type="password" class="form-control" id="" placeholder="password" name="pswd" style="width: 200px;">
       </div>
       <button type="submit" class="btn btn-primary" value="login"> Submit</button>
     </form>
-    <a href="register">REGISTER</a>
+    <!-- <a href="register">REGISTER</a> -->
   </div>
 </body>
 </html>
