--- a/eshop/templates/shop/home.html
+++ b/eshop/templates/shop/home.html
@@ -23,6 +23,9 @@
                 <a class="nav-link" href="add_product">Add product</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="bookings">Bookings</a>
+              </li>  
+              <li class="nav-item">
                 <a class="nav-link" href="shop_logout">logout</a>
               </li>    
             </ul>
