--- a/eshop/templates/user/home.html
+++ b/eshop/templates/user/home.html
@@ -19,7 +19,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">HOME</a>
               </li>
-
+              <li class="nav-item">
+                <a class="nav-link" href="user_bookings">Bookings</a>
+              </li>  
               <li class="nav-item">
                 <a class="nav-link" href="shop_logout">logout</a>
               </li>    
