--- a/gallery_vault/templates/user/add_file.html
+++ b/gallery_vault/templates/user/add_file.html
@@ -27,7 +27,7 @@
 
               <div class="mb-2">
                 <label for="p_name" class="form-label">file Name:</label>
-                <input type="text" class="form-control" placeholder="Enter Plant name" name="name">
+                <input type="text" class="form-control" placeholder="Enter name" name="name">
               </div>
               <!-- <div class="mb-2">
                 <label for="p_type" class="form-label">Plant type</label>
