--- a/gallery_vault/templates/user/home.html
+++ b/gallery_vault/templates/user/home.html
@@ -40,7 +40,7 @@
 
     <div class="container">
       <div class="row">
-        {% for files in data %}
+        {% for files in Files %}
     
       <div class="col-lg-4">
       <div class="card" style="width:400px">
