bookmy show updates

--- a/bkmyshow/templates/homepage.html
+++ b/bkmyshow/templates/homepage.html
@@ -122,7 +122,21 @@
   <b id="text" class="text-black" style="font-size: 1.9vw;">Recommented movies</b>
   <a href="" style="padding-left: 780px;text-decoration: none;color: red;">See All></a>
     <div class="row ">
+
+    {% for movies in Movie %}
       <div class="col-md-2">
+       <a href="view_movie/{{movies.pk}}"> <img src="{{movies.frgrnd_img.url}}" class="rounded img-fluid m-2" width="100%" alt=""></a>
+          <figcaption style="padding-left: 30px;"><b>{{movies.name}}</b> <br> {{movies.cert}} <br> {{movies.lang}}</figcaption>
+      </div>
+
+      {% endfor %}
+
+
+
+
+
+
+      <!-- <div class="col-md-2">
         <a href="sec.html"><img src="{% static 'images/mv2.jpg' %}" class="rounded img-fluid m-2" width="100%" alt=""></a>
         <a href="" style="text-decoration: none;color: black;"><figcaption style="padding-left: 30px;"><b>A.R.M</b> <br> U/A <br> Malayalam</figcaption></a>
       </div>
@@ -145,7 +159,7 @@
       <div class="col-md-2">
         <a href="#"><img src="{% static 'images/mv6.avif' %}" class="rounded img-fluid m-2" width="100%" alt=""></a>
         <a href="" style="text-decoration: none;color: black;"><figcaption style="padding-left: 30px;"><b>Oru Kattil Oru Muri</b> <br> U/A <br> Malayalam</figcaption></a>
-      </div>
+      </div> -->
     </div> 
 </div>
 
